--- a/styles.css
+++ b/styles.css
@@ -59,11 +59,13 @@ padding: 1rem 0;
     /* border:1px solid black; */
     padding: 1rem;
     border-radius: 10px;
+	text-align:center;
 }
 .pictorial-news-section .images{
     /* border:3px solid rgb(244, 19, 19); */
     display: flex;
     flex-direction:column;
+	
 }
 .images img{
     width:190px;
